# gazelle_rust

./: MODULE.bazel  README.md  flake.nix
example/: Cargo.toml
example/src/: BUILD.bazel
examples/: .bazelrc  Cargo.toml  MODULE.bazel
macro/: README.md
proto/: BUILD.bazel  messages.proto
rust_language/: generate.go  lang.go  resolve.go
rust_parser/: BUILD.bazel  lockfile_crates.rs  main.rs
rust_parser/tests/: parse_test.rs
util/: run_gofmt.sh
