load("@rules_rust//rust:defs.bzl", "rust_binary", "rust_library", "rust_test")

rust_library(
    name = "helper",
    srcs = ["helper.rs"],
)

rust_library(
    name = "lib",
    srcs = ["lib.rs"],
)

rust_binary(
    name = "main",
    srcs = ["main.rs"],
    deps = [
        ":lib",
        "@crates//:clap",
    ],
)

rust_test(
    name = "standalone_test",
    srcs = ["standalone_test.rs"],
)

rust_test(
    name = "lib_test",
    crate = ":lib",
)
